--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,8 @@ Back-end/Oceanic/.vs/Oceanic/DesignTimeBuild/.dtbcache
 Back-end/Oceanic/.vs/Oceanic/v15/.suo
 Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide-shm
 Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide-wal
+Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide-wal
+Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide-shm
+Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide
+Back-end/Oceanic/.vs/Oceanic/v15/.suo
+Back-end/Oceanic/.vs/Oceanic/DesignTimeBuild/.dtbcache
