--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,7 @@ Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide-shm
 Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide
 Back-end/Oceanic/.vs/Oceanic/v15/.suo
 Back-end/Oceanic/.vs/Oceanic/DesignTimeBuild/.dtbcache
+Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide
+Back-end/Oceanic/.vs/Oceanic/v15/.suo
+Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide-shm
+Back-end/Oceanic/.vs/Oceanic/v15/Server/sqlite3/storage.ide-wal
