--- a/Back-end/Oceanic/Oceanic.Services/Oceanic.Services.csproj
+++ b/Back-end/Oceanic/Oceanic.Services/Oceanic.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
+    <PackageReference Include="YC.QuickGraph" Version="3.7.5-deta" />
   </ItemGroup>
 
   <ItemGroup>
